2014-10-30  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* tuit/array.lua (unfold): Rewritten

	* tuit/list.lua: Rewritten

2014-10-29  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* tuit/list.lua: Making functions more Lua-ish

2014-10-24  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* tuit/list.lua: Adding SRFI1-like functions

	* tuit/combine.lua: Added documentation and tests

2014-10-20  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* tuit/array.lua, tuit/lazy.lua: Changing unfold method

	* Moved to github