@@ -1,3 +1,7 @@
+2014-10-31  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
+
+	* tuit/list.lua (each: Added each, each_ipair, and each pair
+
 2014-10-30  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
 
 	* tuit/array.lua (unfold): Rewritten
